[tool.poetry]
name = "iotools-tls13-hy"
version = "0.1.0"
description = "Pure Python implementation of TLS1.3 for iotools"
authors = ["vhqr0 <zq_cmd@163.com>"]
readme = "readme.org"
packages = [{include = "iotools_tls13"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
hy = "^0.28.0"
cryptography = "^42.0.0"
certifi = ">=2023.7.22"
dash-hy = "^0.1.0"
iotools-hy = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
